// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon renders active correctly 1`] = `
.c0 {
  cursor: pointer;
}

<i
  className="c0"
/>
`;

exports[`icon renders inactive correctly 1`] = `
.c0 {
  cursor: inherit;
}

<i
  className="c0"
/>
`;
